--- a/theme/devlion/templates/footer.mustache
+++ b/theme/devlion/templates/footer.mustache
@@ -33,7 +33,7 @@
     </div>-->
 
     {{#is_admin}}
-    <a class = "dev-admin" href = "/course/view.php?id=1&sesskey={{sesskey}}&edit=on">{{#str}}settings, theme_devlion{{/str}}</a>
+    <a class = "dev-admin" href = "{{config.wwwroot}}/course/view.php?id=1&sesskey={{sesskey}}&edit=on">{{#str}}settings, theme_devlion{{/str}}</a>
     {{/is_admin}}
 
     <div class = "blank-links blank-links--footer">
