--- a/theme/devlion/templates/frontpage.mustache
+++ b/theme/devlion/templates/frontpage.mustache
@@ -218,8 +218,8 @@
   </div>
   <a href ="#view-1" class = "toTop toTop--frontpage" tabindex= "-1"></a>
   <div class = "dev-aside">
-    <!-- {{> theme_boost/nav-drawer }} -->
-    {{> theme_devlion/nav-drawer }}
+    {{> theme_boost/nav-drawer }}
+    <!-- {{> theme_devlion/nav-drawer }} -->
   </div>
 
   <script src="/theme/devlion/javascript/viewScroller.min.js"></script>
