--- a/theme/devlion/scss/blocks/blank-links.scss
+++ b/theme/devlion/scss/blocks/blank-links.scss
@@ -15,7 +15,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  margin-right: 10px;
+  margin-left: 10px;
   &--facebook {
     background-image: url('/theme/devlion/img/facebook.png');
   }
@@ -44,11 +44,11 @@
   .blank-links--footer {
     display: flex;
     margin-top: 0px;
-    margin-right: auto;
+    margin-left: auto;
   }
   .dir-ltr   .blank-links--footer {
-    margin-left: auto;
-    margin-right: 0;
+    margin-right: auto;
+    margin-left: 0;
   }
   .blank-link {
     width: 40px;
