--- a/theme/devlion/scss/main.scss
+++ b/theme/devlion/scss/main.scss
@@ -1,12 +1,23 @@
+// Get BOOST SCSS
+// Import FontAwesome.
+@import "../../boost/scss/fontawesome";
+// Import All of Bootstrap
+@import "../../boost/scss/bootstrap";
+// Import Core moodle CSS
+@import "../../boost/scss/moodle";
+
+// Custom variables
 @import 'variables.scss';
 @import 'mixin.scss';
-@import 'globals/normolize.scss';
 @import 'allpages.scss';
 @import 'globals/font.scss';
-@import 'globals/lightSlider.scss';
-@import 'globals/toTop.scss';
+@import 'globals/normolize.scss';
 
+// Widgets
+// @import 'widget/lightSlider.scss';
+@import 'widget/toTop.scss';
 
+// Blocks
 @import 'blocks/devlion.scss';
 @import 'blocks/dev-header.scss';
 @import 'blocks/hamburger.scss';
